tests/fail/ShiftRightUnsignedError.java
package fail;

public class ShiftRightUnsignedError {
    public static void main(String[] args) {
        System.out.println(19 >>> 'a');
    }
}